add settings menu & warning add post-process option

--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,34 @@ h1 {
 .custom-light-border-inset {
     box-shadow: 2px 2px 0px rgba(255, 255, 255, 0.15),inset 5px 5px 10px rgba(0, 0,0, 0.5);
 }
+
+/* TRACK */
+input[type="range"].range-track::-webkit-slider-runnable-track {
+  background-color: rgb(30 41 59); /* slate-800 */
+  height: 0.4rem;
+  border-radius: 4px;
+}
+input[type="range"].range-track::-moz-range-track {
+  background-color: rgb(30 41 59);
+  height: 0.4rem;
+  border-radius: 4px;
+}
+
+/* THUMB — rectangle (2px x 10px) */
+input[type="range"].range-thumb::-webkit-slider-thumb {
+    width: 0.5rem;
+  height: 1.5rem;
+  background-color: white;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  margin-top: -1px; /* visually centers thumb on 8px track */
+}
+input[type="range"].range-thumb::-moz-range-thumb {
+    width: 0.5rem;
+  height: 1.5rem;
+  background-color: white;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
